	  CONFIG_MM_NREGIONS > 1, the logic was adding the ISRAM region to
	  the heap twice! (2013-6-27).
	* nuttx/arch/arm/src/sama5/sam_ehci.c:  Add (untested) support for
	  interrupt endpoints (2013-8-28).
	* arch/arm/src/sama5/chip/sam_udphs.h:  High-speed USB device register
	  definitions for the SAMA5 (2013-8-28)
	* arch/arm/src/sama5/sam-udphs.c:  A framework for the USB device
	  driver taken from another architecture.  There is very little
	  useful in this initial check-in (2013-8-29).
	* Remove all empty and most useless README.txt files (2013-8-31)
	* configs/freedom-kl25z/src/kl_spi.c:  Correct typo in name of a
	  function.  From Alan Carvalho de Assis (2013-8-31).
	* drivers/usbdev/cdcacm_desc.c:  Fixed some compilation errors that
	  only occur when dual speed support is enabled (2013-9-1).
	* arch/arm/src/sama5/sam_clockconfig.c and configs/sama5d3x-ek/include/board_*mhz.h:
	  Add logic to support UDPHS clocking (2013-9-13).
	* arm/src/stm32/chip/stm32_tim.h:  Some CCER bit settings changed
	  per SourceForge bug #18 submitted by CCCTSAO (2013-9-2).
	* apps/examples/cc3000, configs/freedom-kl25z, drivers/wireless/cc3000,
	  and nuttx/include/nuttx/cc3000.  Initial support for the TI CC3000
	  network module on the Freescale Freedom-KL25Z board from Alan Carvalho
	  de Assis.  This is still very much a work in progress (2013-9-3).
	* configs/*/usbmsc:  Renamed from config/*/usbstorage to match the
	  change in naming in apps/examples submitted by CCTSAO (2013-9-5).
	* drivers/usbdev.c and pl2303.c:  Don't use max packetsize assigned to
	  the endpoint when allocating request buffers; The default value of
	  the endpoint max packetsize may be incorrect because the endpoint
	  has not yet been configured.  Verified on CDC/ACM.  Corresponding
	  changes made to pl2303, but untested (2013-9-5).
	* arch/arm/src/sama5/sam_udphs.c:  The high-speed device side driver
	  is now functional (although more testing is always needed) (2013-9-5).
